hello/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices
  name: hello
  labels:
    app: hello
    demo: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: rafabene/ms4demo:java
        imagePullPolicy: Always
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-8080
          protocol: TCP
