hello/kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: microservices
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: microservices
  name: hello-gateway
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /
    route:
    - destination:
        host: hello.microservices.svc.cluster.local
        port:
          number: 8080
